# fairkick

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py  services.py
backend/fairkick_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_generate.py
frontend/: .eslintrc.cjs  .prettierrc  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  separator.tsx  slider.tsx
