[project]
name = "fairkick-backend"
version = "0.1.0"
description = "FastAPI service for fairkick team generation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.5"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = ["B008"]
